# automotive-ve-ai-skills-kit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
docs/: case-study.md  index.html  landing-plan.md  methodology.md  styles.css
examples/: adoption_metrics.csv  bom_quote_readiness.csv  evidence_claims.csv  scenario_candidates.csv  skill_benchmarks.csv
examples/output/: adoption_report.md  bom_quote_readiness_report.md  evidence_claim_matrix.md  skill_benchmark_adaptation_report.md  skill_candidate_ranking.md
scripts/: adapt_skill_benchmarks.py  check_bom_quote_readiness.py  generate_adoption_report.py  generate_evidence_matrix.py  score_skill_candidates.py
skills/skill-adoption-feedback/: SKILL.md
skills/vave-cost-opportunity/: SKILL.md
skills/ve-evidence-auditor/: SKILL.md
skills/ve-manual-writer/: SKILL.md
skills/ve-scenario-miner/: SKILL.md
skills/ve-skill-benchmark-adapter/: SKILL.md
src/ve_ai_skills_kit/: __init__.py  adaptation.py  adoption.py  evidence.py  readiness.py  scoring.py
tests/: test_adaptation.py  test_adoption.py  test_evidence.py  test_landing_plan.py  test_pages.py  test_readiness.py  test_scoring.py
